<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/whole_padding_shallow" android:paddingRight="@dimen/whole_padding_shallow"
        android:background="@color/backgroundGray" android:layout_height="match_parent" tools:context=".ui.main.MainActivity">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:elevation="0dp"
    >

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="@string/app_name"
                app:titleTextColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/backgroundGray"
                android:theme="?attr/actionBarTheme">


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@id/appBarLayout"
                    android:layout_above="@id/llBtns" >
        <android.support.v7.widget.RecyclerView
                android:id="@+id/rvNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        />
    </RelativeLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="60dp" android:id="@+id/llBtns"
                  android:orientation="horizontal" android:layout_alignParentBottom="true" >

        <TextView android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="@string/write"
                  android:textStyle="bold" android:gravity="center" android:id="@+id/tvWrite" android:textColor="@color/purple" />

        <TextView android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="@string/search"
                  android:textStyle="bold" android:gravity="center" android:id="@+id/tvFind" android:textColor="@color/purple" />

        <!--<TextView android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="설정"-->
                  <!--android:textStyle="bold" android:gravity="center" android:id="@+id/tvSetting" android:textColor="@color/purple" />-->

        <TextView android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="@string/move_to_top" android:visibility="gone"
                  android:textStyle="bold" android:gravity="center" android:id="@+id/tvMoveTop" android:textColor="@color/purple" />

        <TextView android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="@string/add_short_cut" android:visibility="gone"
                  android:textStyle="bold" android:gravity="center" android:id="@+id/tvQuickOn" android:textColor="@color/purple" />

        <TextView android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="@string/remove_short_cut" android:visibility="gone"
                  android:textStyle="bold" android:gravity="center" android:id="@+id/tvQuickOff" android:textColor="@color/purple" />

        <TextView android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="@string/move_to_bottom" android:visibility="gone"
                  android:textStyle="bold" android:gravity="center" android:id="@+id/tvMoveBottom" android:textColor="@color/purple" />

        <TextView android:layout_width="0dp" android:layout_height="60dp" android:layout_weight="1" android:text="@string/show_all" android:visibility="gone"
                  android:textStyle="bold" android:gravity="center" android:id="@+id/tvShowAll" android:textColor="@color/purple" />



    </LinearLayout>

</RelativeLayout>